<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- login page -->
    <string name="app_name">Sportal</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="new_user">"No account?"</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="social_media_login">Log in with</string>
    <string name="login">Log in</string>
    <string name="or_use">or use: </string>
    <string name="logo">logo</string>
    <string name="login_or">OR</string>

    <!-- navbar -->
    <string name="navbar_home">Home</string>
    <string name="navbar_games">Games</string>
    <string name="navbar_search">Search</string>
    <string name="navbar_explore">Explore</string>
    <string name="navbar_social">Social</string>

    <string name="accept_terms">By checking this, you are agreeing to our</string>
    <string name="terms_conditions"><u>terms and conditions</u></string>
    <string name="create">Create</string>
    <string name="options_profile">My profile</string>
    <string name="options_logout">Logout</string>
    <string name="welcome">Welcome to Sportal!</string>
    <string name="follow_steps">Follow these steps to set up your account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="preferences_birthday_text">Birthday</string>
    <string name="location">Location</string>
    <string name="preferences_sports_you_play">Select sports you play:</string>
    <string name="done">Done</string>
    <string name="click_to_add">Add</string>
    <string name="birthday_dialog">Birthday</string>
    <string name="sport_dialog">Sports</string>
    <string name="display_name">Display name</string>
    <string name="gender_reminder">Please select a gender</string>
    <string name="search">Search</string>
    <string name="sport">Sport</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="skill_level">Skill level</string>
    <string name="to">to</string>
    <string name="date">Date</string>
    <string name="games_tab_sort_by">Sort by:</string>
    <string name="duration_picker_text">:</string>
    <string name="image">image</string>

    <!-- MapBox access token -->
    <string name="mapbox_access_token">pk.eyJ1IjoiZmVpbnN0ZXIiLCJhIjoiY2p4bGo1cHV3MDZzNzN4b2FxYTFjaWdtaCJ9.B5gBlRa8pB0wRhkx-IN2aw</string>

    <!-- SendBird App ID -->
    <string name="sendbird_app_id" tools:ignore="TypographyDashes">1BEE8A22-3A86-43E0-BFE1-4D2F6114EA8E</string>

    <!-- Add Games Page -->
    <string name="add_game_select_sport">SELECT SPORT</string>
    <string name="add_game_make_game_text">make game!</string>
    <string name="add_game_toolbar_text">Create your game</string>
    <string name="divider">divider</string>
    <string name="add_game_required_details_text">REQUIRED DETAILS</string>
    <string name="add_game_enter_game_name">Enter game name</string>
    <string name="add_game_select_a_date">Select a date</string>
    <string name="add_game_select_a_time">Select a time</string>
    <string name="add_game_set_a_duration">Set a duration</string>
    <string name="add_game_min_players">Min players</string>
    <string name="add_game_max_players">Max players</string>
    <string name="add_game_pick_a_location">Pick a location</string>
    <string name="add_game_select_location">Select location</string>
    <string name="add_game_confirm">Confirm</string>
    <string name="add_game_try_again">Try again</string>
    <string name="add_game_select_skill_level">Select the rough skill level of the game!</string>
    <string name="add_game_optional_details_text">OPTIONAL DETAILS</string>
    <string name="add_game_game_description">Enter game description</string>
    <string name="add_game_make_game">MAKE GAME!</string>

    <!--Search Page-->
    <string name="search_sport_filter">SPORTS</string>
    <string name="search_sort">SORT BY</string>
    <string name="search_filters">Filters</string>
    <string name="search_searchbar">Name</string>
    <string name="search_title"><b>SEARCH FOR GAMES</b></string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="search_filter">Select Filters</string>
    <string name="search_time_of_day">Time of day:</string>
    <string name="search_skill_level">Skill level:</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="select_sports">Select sports</string>
    <string name="search_location">Location:</string>

    <string name="preferences_pick_profile_pic">Pick a profile pic:</string>
    <string name="preferences_enter_details">Enter details:</string>
    <string name="preferences_bio_text">Bio (Optional)</string>
    <string name="preferences_select_country_text">Country</string>

    <string name="display_user_looking_to_play">Looking to play:</string>
    <string name="user_profile_edit_profile">Edit Profile</string>
    <string name="display_profile_friends">Friends</string>
    <string name="display_user_add_friend">Add Friend</string>
    <string name="display_user_games_played">Games played</string>
    <string name="display_user_friends">Friends</string>
    <string name="display_user_friends_caps">FRIENDS</string>
    <string name="display_user_no_friends_msg">No friends (yet)</string>
    <string name="display_user_upcoming_games_caps">UPCOMING GAMES</string>
    <string name="display_user_past_games_caps">PAST GAMES</string>
    <string name="display_user_add_friend_to_see_more">Add friend to see more!</string>

    <string name="edit">edit</string>
    <string name="join">join</string>
    <string name="leave">leave</string>
    <string name="edit_game">Edit game</string>
    <string name="make_changes">Make changes!</string>
    <string name="enough_players">You have enough players!</string>

    <!-- GamePage -->
    <string name="game_details_participating">Current: %d/%d</string>
    <string name="game_details_min_players">Minimum: %d</string>
    <string name="game_details_title">Participants:</string>
    <string name="no_players">There are currently no participants :(</string>
    <string name="game_ready">GAME IS ON!</string>
    <string name="more_info">More details: </string>
    <string name="about_owner">About the owner:</string>
    <string name="details">DETAILS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferences_edit_profile">Edit Profile:</string>
    <string name="display_profile_friend_request_pending">Friend request pending</string>
    <string name="display_user_accept_friend_request">Accept friend request</string>
    <string name="friend_request_accept">Accept</string>
    <string name="friend_request_decline">Decline</string>
    <string name="social_requests_no_requests_text">No friend requests</string>
    <string name="friend_card_sports_you_have_in_common">Sports in common:</string>
    <string name="chat_page_send">Send</string>
    <string name="chat_page_message_hint">Message</string>
    <string name="games_board_no_permission">Oops, you are not participating in this game!</string>
    <string name="game_details_game_is_over">GAME IS OVER</string>
    <string name="game_completed">COMPLETED</string>

</resources>